--- a/php2/nginx.conf
+++ b/php2/nginx.conf
@@ -2,39 +2,49 @@
 # The default server
 #
 server {
-	listen     80;
-	server_name first;
-	root /var/www/html;
+        listen     80;
+        server_name first;
+        root /var/www/html;
 
-	index index.php;
+        index index.php;
 
-	location / {
-    	    index index.php index.html index.htm;
-	}
+        location / {
+            index index.php index.html index.htm;
 
-	location /mvc/ {
-		if (!-e $request_filename){
-			rewrite ^/mvc/(.*)$ /mvc/index.php?url=$1 last;
-		}
-	}
 
-	error_page  404          	/404.html;
-	location = /404.html {
-    	root   /usr/share/nginx/html;
-	}
+                allow 127.0.0.1;
+                deny all;
+        }
 
-	error_page   500 502 503 504  /50x.html;
-	location = /50x.html {
-    	root   /usr/share/nginx/html;
-	}
+        location /php2/eshop/admin/ {
+                auth_basic              "closed site";
+                auth_basic_user_file    /var/www/html/php2/eshop/admin/htpasswd;
+        }
 
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	#
-	location ~ \.php$ {
-    	root       	/var/www/html;
-    	fastcgi_pass   unix:/var/run/php5-fpm.sock;
-    	fastcgi_index  index.php;
-    	fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-    	include    	fastcgi_params;
-	}
+        location /mvc/ {
+                if (!-e $request_filename){
+                        rewrite ^/mvc/(.*)$ /mvc/index.php?url=$1 last;
+                }
+        }
+
+        error_page  404                 /404.html;
+        location = /404.html {
+        root   /usr/share/nginx/html;
+        }
+
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+        root   /usr/share/nginx/html;
+        }
+
+        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        #
+        location ~ \.php$ {
+        root            /var/www/html;
+        fastcgi_pass   unix:/var/run/php5-fpm.sock;
+        fastcgi_hide_header X-Powered-By;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
+        include         fastcgi_params;
+        }
 }
